--- a/web/w3c/JS/01/index.html
+++ b/web/w3c/JS/01/index.html
@@ -298,8 +298,128 @@
 
             console.log(rs);
 
+            var evarr = ['apple','pear','orange'];
+            console.log(evarr.every(function (s){
+                return s.length > 0;
+            }));
+
+            console.log(evarr.find(function (s){
+                return s.toLowerCase() === s;
+            }));
+ 
+
+            function countfunc(){
+                var arr = [];
+                for(var i = 0;i <= 3;i++){
+                    arr.push(function(n){
+                        return function(){
+                            return n * n;
+                        }
+                    }(i));
+                }
+
+                return arr;
+            }
+
+            var results = countfunc();
+            var f1 = results[0];
+            console.log(f1());
 
 
+            var nimingObj = {
+                birth: 1990,
+                getAge: function(){
+                    var b = this.birth;
+                    // var fn = function(){
+                    //     return new Date().getFullYear - this.birth;
+                    // };
+                    // return fn();
+                    var fn = () => new Date().getFullYear() - this.birth;
+                    return fn()
+                }
+            }
+
+
+            function* foogen(x){
+                yield x + 1;
+                yield x + 2;
+                yield x + 3;
+                return x + 3;
+            }
+
+            function* fibgen(max){
+                var 
+                    t,
+                    a = 0,
+                    b = 1,
+                    n = 0;
+                while(n < max){
+                    yield a;
+                    [a, b] = [b, a+ b];
+                    n ++;
+                }
+                return ;
+            }
+
+            // var f = fibgen(5);
+            // console.log(f.next());
+            // console.log(f.next());
+            // console.log(f.next());
+            // console.log(f.next());
+            // console.log(f.next());
+            // console.log(f.next());
+
+            for(var x of fibgen(10)){
+                console.log(x);
+            }
+
+            var re1 = /ABC\-001/;
+            var reg2 = new RegExp('/ABC\-001/');
+
+            var re3 = /^\d{3}\-\d{3,8}/;
+            console.log(re3.test('010-12345'));
+            var s3 = 'a,b;;c   f';
+            console.log(s3.split(/[\s\,\;]+/));
+
+            var reex1 = /^(\d{3})-(\d{3,8})$/;
+            console.log(reex1.exec('010-12345'));
+            console.log(reex1.exec('010 123'));
+
+            var xiaoming = {
+                name: '小明',
+                age: 14,
+                gender: true,
+                height: 1.65,
+                grade: null,
+                'middle-school': '\"W3C\" Middle School',
+                skills: ['JavaScript', 'Java', 'Python', 'Lisp'],
+                toJSON: function(){
+                    return {
+                        'Name': this.name,
+                        'Age': this.age
+                    };
+                }
+            };
+            console.log(JSON.stringify(xiaoming, null, '  '));
+            console.log(JSON.stringify(xiaoming,['name','skills'],'   '));
+
+
+            function convert(key, value){
+                if(typeof value === 'string'){
+                    return value.toUpperCase();
+                }
+                return value;
+            }
+            console.log(JSON.stringify(xiaoming, convert, '  '));
+            console.log(JSON.stringify(xiaoming));
+            var obj = JSON.parse('{"name":"小明","age":14}',function(key,value){
+                if(key ==='name'){
+                    return value + '同学';
+                }
+                return value;
+            });
+            console.log(obj);
+            console.log(JSON.stringify(obj));
         </script>
     </body>
 </html>
