--- a/front-end-dev-book/ottergram/index.html
+++ b/front-end-dev-book/ottergram/index.html
@@ -3,44 +3,87 @@
     <head>
         <meta charset="utf-8">
         <title>ottergram</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link rel="stylesheet" href="stylesheets/style.css">
     </head>
     <body>
-        <header>
-            <h1 class="logo-text">ottergram</h1>
-        </header>
-        <ul class="thumbnail-list">
-            <li class="thumbnail-item">
-                <a href="#">
-                    <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the otter">
-                    <span class="thumbnail-title">Barry</span>
-                </a>
-            </li>
-            <li class="thumbnail-item">
-                <a href="#">
-                    <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the otter">
-                    <span class="thumbnail-title">Robin</span>
-                </a>
-            </li>
-            <li class="thumbnail-item">
-                <a href="#">
-                    <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the otter">
-                    <span class="thumbnail-title">Maurice</span>
-                </a>
-            </li>
-            <li class="thumbnail-item">
-                <a href="#">
-                    <img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley the otter">
-                    <span class="thumbnail-title">Lesley</span>
-                </a>
-            </li>
-            <li class="thumbnail-item">
-                <a href="#">
-                    <img class="thumbnail-image" src="img/otter5.jpg" alt="Barara the otter">
-                    <span class="thumbnail-title">Barara</span>
-                </a>
-            </li>
-        </ul>
+
+        <main class="main-header">
+            <header>
+                <h1 class="logo-text">ottergram</h1>
+            </header>
+        </main>
+        <main class="main-content">
+            <ul class="thumbnail-list">
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the otter">
+                        <span class="thumbnail-title">Barry</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the otter">
+                        <span class="thumbnail-title">Robin</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the otter">
+                        <span class="thumbnail-title">Maurice</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley the otter">
+                        <span class="thumbnail-title">Lesley</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter5.jpg" alt="Barara the otter">
+                        <span class="thumbnail-title">Barara</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the otter">
+                        <span class="thumbnail-title">Barry</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the otter">
+                        <span class="thumbnail-title">Robin</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the otter">
+                        <span class="thumbnail-title">Maurice</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley the otter">
+                        <span class="thumbnail-title">Lesley</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter5.jpg" alt="Barara the otter">
+                        <span class="thumbnail-title">Barara</span>
+                    </a>
+                </li>
+            </ul>
+            <div class="detail-image-container">
+                <div class="detail-image-frame">
+                    <img class="detail-image" src="img/otter1.jpg" alt="">
+                    <span class="detail-image-title">Stayin' Alive</span>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
